fixed icons to be more dynamic

--- a/Code/client/index.html
+++ b/Code/client/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + Vue</title>
     <script src="https://unpkg.com/vue-router@4"></script>
+    <script src="js/jsPDF/dist/jspdf.umd.js"></script>
   </head>
   <body>
     <div id="app"></div>
